[gd_scene load_steps=12 format=2]

[ext_resource path="res://map/tile/Main.gd" type="Script" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://map/tile/tile1.tres" type="TileSet" id=3]
[ext_resource path="res://map/MapPortal.tscn" type="PackedScene" id=4]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/HUD.tscn" type="PackedScene" id=6]
[ext_resource path="res://enemy/Skeleton.tscn" type="PackedScene" id=7]
[ext_resource path="res://enemy/Bandit.tscn" type="PackedScene" id=8]
[ext_resource path="res://map/fire.tscn" type="PackedScene" id=9]
[ext_resource path="res://map/water.tscn" type="PackedScene" id=10]
[ext_resource path="res://sprites/backgrounds/Mountains_PS.png" type="Texture" id=11]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 50, 530 )

[node name="Camera2D" type="Camera2D" parent="Player"]
offset = Vector2( 0, -100 )
current = true
limit_left = 0
smoothing_enabled = true

[node name="TileMap" type="TileMap" parent="."]
z_index = 10
tile_set = ExtResource( 3 )
cell_size = Vector2( 70, 70 )
collision_layer = 2
collision_mask = 9
format = 1
tile_data = PoolIntArray( -1, 4, 0, -65536, 4, 0, -65535, 4, 0, -65534, 4, 0, -65533, 4, 0, -65532, 4, 0, -65531, 4, 0, -65530, 4, 0, -65529, 4, 0, -65528, 4, 0, -65527, 4, 0, -65526, 4, 0, -65525, 4, 0, -65524, 4, 0, -65523, 4, 0, -65522, 4, 0, -65521, 4, 0, 65535, 4, 0, 131071, 4, 0, 196607, 4, 0, 262143, 4, 0, 327679, 4, 0, 262167, 3, 0, 262168, 3, 0, 262169, 3, 0, 262170, 3, 0, 393215, 4, 0, 327699, 3, 0, 327700, 3, 0, 327701, 3, 0, 327702, 3, 0, 327703, 1, 0, 327704, 1, 0, 327705, 1, 0, 327706, 1, 0, 458751, 4, 0, 524287, 4, 0, 589823, 4, 0, 524288, 3, 0, 524289, 3, 0, 524295, 3, 0, 524296, 3, 0, 524297, 3, 0, 524298, 3, 0, 524299, 3, 0, 524300, 3, 0, 524301, 3, 0, 524302, 3, 0, 524303, 3, 0, 524304, 3, 0, 524305, 3, 0, 524306, 3, 0, 524307, 3, 0, 524308, 3, 0, 524309, 3, 0, 524310, 3, 0, 524311, 3, 0, 524312, 3, 0, 524313, 3, 0, 524314, 3, 0, 655359, 4, 0, 589824, 1, 0, 589825, 1, 0, 589826, 1, 0, 589827, 1, 0, 589828, 1, 0, 589829, 1, 0, 589830, 1, 0, 589831, 1, 0, 589832, 1, 0, 589833, 1, 0, 589834, 1, 0, 589835, 1, 0, 589836, 1, 0, 589837, 1, 0, 589838, 1, 0, 589839, 1, 0, 589840, 1, 0, 589841, 1, 0, 589842, 1, 0, 589843, 1, 0, 589844, 1, 0, 589845, 1, 0, 589846, 1, 0, 589847, 1, 0, 589848, 1, 0, 589849, 1, 0, 589850, 1, 0, 655360, 1, 0, 655361, 1, 0, 655362, 1, 0, 655363, 1, 0, 655364, 1, 0, 655365, 1, 0, 655366, 1, 0, 655367, 1, 0, 655368, 1, 0, 655369, 1, 0, 655370, 1, 0, 655371, 1, 0, 655372, 1, 0, 655373, 1, 0, 655374, 1, 0, 655375, 1, 0, 655376, 1, 0, 655377, 1, 0, 655378, 1, 0, 655379, 1, 0, 655380, 1, 0, 655381, 1, 0, 655382, 1, 0, 655383, 1, 0, 655384, 1, 0, 655385, 1, 0, 655386, 1, 0, 720896, 1, 0, 720897, 1, 0, 720898, 1, 0, 720899, 1, 0, 720900, 1, 0, 720901, 1, 0, 720902, 1, 0, 720903, 1, 0, 720904, 1, 0, 720905, 1, 0, 720906, 1, 0, 720907, 1, 0, 720908, 1, 0, 720909, 1, 0, 720910, 1, 0, 720911, 1, 0, 720912, 1, 0, 720913, 1, 0, 720914, 1, 0, 720915, 1, 0, 720916, 1, 0, 720917, 1, 0, 720918, 1, 0, 720919, 1, 0, 720920, 1, 0, 720921, 1, 0, 720922, 1, 0, 786432, 1, 0, 786433, 1, 0, 786434, 1, 0, 786435, 1, 0, 786436, 1, 0, 786437, 1, 0, 786438, 1, 0, 786439, 1, 0, 786440, 1, 0, 786441, 1, 0, 786442, 1, 0, 786443, 1, 0, 786444, 1, 0, 786445, 1, 0, 786446, 1, 0, 786447, 1, 0, 786448, 1, 0, 786449, 1, 0, 786450, 1, 0, 786451, 1, 0, 786452, 1, 0, 786453, 1, 0, 786454, 1, 0, 786455, 1, 0, 786456, 1, 0, 786457, 1, 0, 786458, 1, 0 )

[node name="MapPortal" parent="." instance=ExtResource( 4 )]
position = Vector2( 1650, 540 )

[node name="Enemy" parent="." instance=ExtResource( 5 )]
position = Vector2( 1400, 525 )
collision_mask = 3
detect_range = 500
attack_range = 300
gold = 100

[node name="Enemy2" parent="." instance=ExtResource( 5 )]
position = Vector2( 1260, 526 )
walk_force = 50
gold = 200

[node name="HUD" parent="." instance=ExtResource( 6 )]

[node name="Skeleton" parent="." instance=ExtResource( 7 )]
position = Vector2( 1163, 516 )

[node name="Bandit" parent="." instance=ExtResource( 8 )]
position = Vector2( 770, 512.135 )
speed = 100
walk_force = 500
attack_range = 60

[node name="map_objects" type="Node" parent="."]

[node name="fire" parent="map_objects" instance=ExtResource( 9 )]
position = Vector2( 1540, 485 )

[node name="water" parent="map_objects" instance=ExtResource( 10 )]
position = Vector2( 315, 595 )
scale = Vector2( 5, 1 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.5, 1 )
motion_mirroring = Vector2( 1600, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 11 )
centered = false
[connection signal="breath_updated" from="Player" to="." method="_on_Player_breath_updated"]
[connection signal="gold_updated" from="Player" to="." method="_on_Player_gold_updated"]
[connection signal="hp_updated" from="Player" to="." method="_on_Player_hp_updated"]
[connection signal="player_die" from="Player" to="." method="_on_Player_player_die"]
[connection signal="execute_portal" from="MapPortal" to="." method="_on_MapPortal_execute_portal"]
[connection signal="body_entered" from="map_objects/fire" to="." method="_on_fire_body_entered"]
